--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
+/* App.css */
 .App {
+  position: relative;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: left;
+}
+
+/* Optional: If you want the form and list to take up the full horizontal space */
+.MyTaskComponent, .TaskList {
+  flex: 1;
+}
+
+/* The overall task list container */
+.task-list {
+  position: fixed;     /* Fix it to the viewport */
+  top: 0;              /* Align to the top of the viewport */
+  left: 0;            /* Align to the left of the viewport */
+  width: 400px;        /* Set a fixed width */
+  height: 100vh;       /* Full height of the viewport */
+  background-color: grey; /* Light gray background */
+  box-shadow: -3px 0 10px rgba(0, 0, 0, 0.1); /* Shadow on the left side */
+  overflow-y: auto;    /* Add a scrollbar if content overflows vertically */
+  padding: 20px 10px;  /* Some padding */
+}
+
+/* Each individual task */
+.task {
+  padding: 10px;
+  background-color: lightblue;
+  margin-bottom: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;  /* Rounded corners */
+  font-size: 16px;     /* Font size of the task text */
+  position: static;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Add some hover effect to the tasks */
+.task:hover {
+  background-color:darkcyan;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);  /* semi-transparent background */
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;  /* these will center the modal content */
+  z-index: 1000;  /* high z-index to ensure it's above other content */
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
